--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 NEUTRINO HAS BEEN DEVELOPED BY ITACHI, I'M ONLY RELEASING IT!
+
+Development thread: https://web.archive.org/web/20120306070111/http://forum.ragezone.com/f331/neutrino-java-server-r63-latest-807854/
+
+Release thread: https://web.archive.org/web/20120310063017/http://forum.ragezone.com:80/f353/neutrino-r63-java-opensource-824927/
